整合密码可见功能及全模块测试数据，整理项目文档